--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,6 @@
-*.ipynb linguist-language=Jupyter
+*.ipynb linguist-detectable=true
+*.ipynb linguist-language=python
 *.tsv filter=lfs diff=lfs merge=lfs -text
+*.csv filter=lfs diff=lfs merge=lfs -text
+*.parquet filter=lfs diff=lfs merge=lfs -text
+*.txt filter=lfs diff=lfs merge=lfs -text
